[project]
name = "chain-smoker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">3.8,<3.14"
dependencies = [
    "pydantic>=2.10.6",
    "pyyaml>=6.0.3",
    "requests>=2.32.4",
]


[tool.pytest]
testpaths = [
  "tests",
]
addopts = [
  "-rpPa",
  "--ignore=src"
]
collect_imported_tests = false

[dependency-groups]
dev = [
    "parameterized>=0.9.0",
    "pytest>=8.3.5",
    "pytest-cov>=5.0.0",
]

